<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="com.example.wawandco.scrumeet.CreateTeam">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/newTeam"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/teamNameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_name"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/team_key_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_key"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/team_key_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveTeam"
        android:text="@string/create" />
</LinearLayout>
